--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       image: schoolofdevops/vote:dev
       build: 
         context: .
-        dockerfile: Dockerfile
+        dockerfile: vote/Dockerfile
       ports:
         - 80
       networks:
